# EdiQ

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CodeEditor.cpp  CodeEditor.h  CodeEditorSidebar.cpp  CodeEditorSidebar.h  Config.cpp  Config.h  EdiException.h  EditorFactory.cpp  EditorFactory.h  IEditor.h  IEditorFactory.h  LICENSE  MRU.cpp  MRU.h  PlainTextEdit.cpp  PlainTextEdit.h  Popup.cpp  Popup.h  README.md  SearchBar.cpp  SearchBar.h  TODO.md  UntitledCounter.cpp  UntitledCounter.h  XRaise.cpp  XRaise.h  een.cpp  een.h  main.cpp  mainwindow.cpp  mainwindow.h  mrutabwidget.cpp  mrutabwidget.h  raise.cpp  raise.h
res/: icons.qrc
